argocd-prod/api-gateway.yaml
# ==============================
# Deployment
# ==============================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: realworld-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: us-east1-docker.pkg.dev/test-12625323/gke-microservice/api-gateway:7
        ports:
        - containerPort: 8085

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8085
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8085
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 3
          timeoutSeconds: 5

---

# ==============================
# Service (ClusterIP)
# ==============================
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: realworld-prod
  annotations:
    cloud.google.com/backend-config: '{"ports": {"http":"api-gateway-backendconfig"}}'
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8085
